アイコン追加

--- a/OrderManager/FrmMain.resx
+++ b/OrderManager/FrmMain.resx
@@ -893,4 +893,21 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>39</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAQAAAAAADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAwMDAAICAgAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
+        AAD///8AAAAAAIiIiIh3d3d3/////wAAAACIiIiId3d3d/////8AAAAAiIiIiHd3d3f/////AAAAAIiI
+        iIh3d3d3/////wAAAACIiIiId3d3d/////8AAAAAiIiIiHd3d3f/////AAAAAIiIiIh3d3d3/////wAA
+        AACIiIiId3d3d/////8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiIiACIgAAAAAiIiIgAAAiIiIiA
+        iIAAAACIiIiIgACIiIiIgIiAAAAAiIiIiIgIiIAAAICIgAAAAIAAAIiICIgAAAAAiIAAAAAAAAAIiIiA
+        AAAAAIiAAAAAAAAAiIiIgAAAAACIiIiAAACIiIiIiIAAAAAAiIiIiAAIiIiIgIiAAAAAAIiIiIiAiIiI
+        iACIgAAAAACIgACIgIiIAAAACIgAAAAAiIAAiICIgAAAAAiIgAAAgIiAAIiAiIgAAAgAiIiIiICIiIiI
+        gIiIiIiIAAiIiIiAiIiIiAAIiIiIiAAACIiIAIiIiIAAAIiIiIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP/////Hjjjuu3b3bn76761++u+hfvrvrrt2927Hjvjh//////gx/gPgEfwBwBH8AIfR
+        /fCP8f/4H/H/8B/wHwAf8A4BH/AEAx/xxD+P8cR/h9HEPsAQBADgEA4A+DAfAQ==
+</value>
+  </data>
 </root>
